templates/gmod_template.yaml
---
# Source: gmod/templates/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-canary
  labels:
    app: release-name
spec:
  selector:
    app:  release-name
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
# Source: gmod/templates/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-stable
  labels:
    app: release-name
spec:
  selector:
    app:  release-name
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
# Source: gmod/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name
  labels:
    app: release-name
spec:
  selector:
    app:  release-name
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
# Source: gmod/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name
spec:
  selector:
    matchLabels:
      app: release-name
  template:
    metadata:
      labels:
        app: release-name
        keptn.sh/app: gmod-app
        keptn.sh/workload: gmod
        keptn.sh/version: 0.0.1
    spec: 
      
      
      containers: 
        
        - name: gmod
          image: "c8n.io/krzwiatrzyk/gmod:0.0.1"
          resources: 
            limits:
              cpu: 50m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 64Mi
          
          ports:
          - containerPort: 8080
            name: http
          
          volumeMounts:
          - mountPath: /gmod
            name: config
          
        
      volumes:
      - name: config
        configMap:
          name: release-name-config
---
# Source: gmod/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name
spec:
  ingressClassName: nginx
  rules:
    - host: gmod.staging.windkube.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name
                port: 
                  number: 8080
  tls:
  - hosts:
    - gmod.staging.windkube.com
